--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
 command = "pip install requirements.txt"
-publish = "C:\Users\zaina\OneDrive\Desktop\A NEW BEGINNING"
+publish = "C:\\Users\\zaina\\OneDrive\\Desktop\\A NEW BEGINNING\\public"
