--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-command = "pip install requirements.txt"
+command = "pip install -r requirements.txt"
 publish = "C:\\Users\\zaina\\OneDrive\\Desktop\\A NEW BEGINNING\\public"
