--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
-[build]
+[[build]]
 command = "pip3 install -r requirements.txt"
-publish = "C:\\Users\\zaina\\OneDrive\\Desktop\\A NEW BEGINNING\\public"
+publish = "public"
