--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,8 @@
 [build]
 command = "pip3 install -r requirements.txt"
 publish = "public"
+[redirects]
+from = "http://*"
+to = "https://buzzingtopicsblogs.online"
+status = 301
+force = true
