--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
 command = "pip3 install -r requirements.txt"
 publish = "public"
-[redirects]
+[[redirects]]
 from = "http://*"
 to = "https://buzzingtopicsblogs.online"
 status = 301
